ide: add compiler code generation options frame
git-svn-id: trunk@23336 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3396,6 +3396,9 @@ ide/frames/codetools_space_options.pas svneol=native#text/pascal
 ide/frames/codetools_wordpolicy_options.lfm svneol=native#text/plain
 ide/frames/codetools_wordpolicy_options.lrs svneol=native#text/pascal
 ide/frames/codetools_wordpolicy_options.pas svneol=native#text/pascal
+ide/frames/compiler_codegen_options.lfm svneol=native#text/plain
+ide/frames/compiler_codegen_options.lrs svneol=native#text/pascal
+ide/frames/compiler_codegen_options.pas svneol=native#text/pascal
 ide/frames/compiler_messages_options.lfm svneol=native#text/plain
 ide/frames/compiler_messages_options.lrs svneol=native#text/plain
 ide/frames/compiler_messages_options.pas svneol=native#text/plain
