ide: add linking options frame
git-svn-id: trunk@23337 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3399,6 +3399,9 @@ ide/frames/codetools_wordpolicy_options.pas svneol=native#text/pascal
 ide/frames/compiler_codegen_options.lfm svneol=native#text/plain
 ide/frames/compiler_codegen_options.lrs svneol=native#text/pascal
 ide/frames/compiler_codegen_options.pas svneol=native#text/pascal
+ide/frames/compiler_linking_options.lfm svneol=native#text/plain
+ide/frames/compiler_linking_options.lrs svneol=native#text/pascal
+ide/frames/compiler_linking_options.pas svneol=native#text/pascal
 ide/frames/compiler_messages_options.lfm svneol=native#text/plain
 ide/frames/compiler_messages_options.lrs svneol=native#text/plain
 ide/frames/compiler_messages_options.pas svneol=native#text/plain
