ide: add verbosity options frame
git-svn-id: trunk@23338 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3411,6 +3411,9 @@ ide/frames/compiler_parsing_options.pas svneol=native#text/plain
 ide/frames/compiler_path_options.lfm svneol=native#text/plain
 ide/frames/compiler_path_options.lrs svneol=native#text/plain
 ide/frames/compiler_path_options.pas svneol=native#text/plain
+ide/frames/compiler_verbosity_options.lfm svneol=native#text/plain
+ide/frames/compiler_verbosity_options.lrs svneol=native#text/pascal
+ide/frames/compiler_verbosity_options.pas svneol=native#text/pascal
 ide/frames/desktop_options.lfm svneol=native#text/plain
 ide/frames/desktop_options.lrs svneol=native#text/pascal
 ide/frames/desktop_options.pas svneol=native#text/pascal
