ide: add compiler other options frame
git-svn-id: trunk@23339 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3405,6 +3405,9 @@ ide/frames/compiler_linking_options.pas svneol=native#text/pascal
 ide/frames/compiler_messages_options.lfm svneol=native#text/plain
 ide/frames/compiler_messages_options.lrs svneol=native#text/plain
 ide/frames/compiler_messages_options.pas svneol=native#text/plain
+ide/frames/compiler_other_options.lfm svneol=native#text/plain
+ide/frames/compiler_other_options.lrs svneol=native#text/pascal
+ide/frames/compiler_other_options.pas svneol=native#text/pascal
 ide/frames/compiler_parsing_options.lfm svneol=native#text/plain
 ide/frames/compiler_parsing_options.lrs svneol=native#text/plain
 ide/frames/compiler_parsing_options.pas svneol=native#text/plain
