--- a/.gitattributes
+++ b/.gitattributes
@@ -3399,6 +3399,9 @@ ide/frames/codetools_wordpolicy_options.pas svneol=native#text/pascal
 ide/frames/compiler_codegen_options.lfm svneol=native#text/plain
 ide/frames/compiler_codegen_options.lrs svneol=native#text/pascal
 ide/frames/compiler_codegen_options.pas svneol=native#text/pascal
+ide/frames/compiler_compilation_options.lfm svneol=native#text/plain
+ide/frames/compiler_compilation_options.lrs svneol=native#text/pascal
+ide/frames/compiler_compilation_options.pas svneol=native#text/pascal
 ide/frames/compiler_inherited_options.lfm svneol=native#text/plain
 ide/frames/compiler_inherited_options.lrs svneol=native#text/pascal
 ide/frames/compiler_inherited_options.pas svneol=native#text/pascal
