--- a/.gitattributes
+++ b/.gitattributes
@@ -3291,9 +3291,6 @@ ide/componentlist.lfm svneol=native#text/pascal
 ide/componentlist.lrs svneol=native#text/pascal
 ide/componentlist.pas svneol=native#text/pascal
 ide/componentpalette.pas svneol=native#text/pascal
-ide/compoptcondpropsdlg.lfm svneol=native#text/plain
-ide/compoptcondpropsdlg.lrs svneol=native#text/pascal
-ide/compoptcondpropsdlg.pas svneol=native#text/plain
 ide/compoptsmodes.pas svneol=native#text/plain
 ide/condef.lfm svneol=native#text/plain
 ide/condef.lrs svneol=native#text/pascal
@@ -3426,6 +3423,9 @@ ide/frames/compiler_path_options.pas svneol=native#text/plain
 ide/frames/compiler_verbosity_options.lfm svneol=native#text/plain
 ide/frames/compiler_verbosity_options.lrs svneol=native#text/pascal
 ide/frames/compiler_verbosity_options.pas svneol=native#text/pascal
+ide/frames/compoptcondpropsdlg.lfm svneol=native#text/plain
+ide/frames/compoptcondpropsdlg.lrs svneol=native#text/pascal
+ide/frames/compoptcondpropsdlg.pas svneol=native#text/plain
 ide/frames/desktop_options.lfm svneol=native#text/plain
 ide/frames/desktop_options.lrs svneol=native#text/pascal
 ide/frames/desktop_options.pas svneol=native#text/pascal
