translations: german: updates from Swen Heinig
git-svn-id: trunk@23411 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -620,6 +620,7 @@ components/datadict/frmselectcodegenerator.lfm svneol=native#text/plain
 components/datadict/frmselectcodegenerator.lrs svneol=native#text/pascal
 components/datadict/frmselectcodegenerator.pp svneol=native#text/plain
 components/datadict/idedatadict.pp svneol=native#text/plain
+components/datadict/languages/ldd_consts.de.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.pb.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.po svneol=native#text/plain
 components/datadict/languages/ldd_consts.ru.po svneol=native#text/plain
@@ -664,6 +665,7 @@ components/dbexport/frmexportprogress.pp svneol=native#text/plain
 components/dbexport/frmselectexportformat.lfm svneol=native#text/plain
 components/dbexport/frmselectexportformat.lrs svneol=native#text/pascal
 components/dbexport/frmselectexportformat.pp svneol=native#text/plain
+components/dbexport/languages/sdb_consts.de.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.pb.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.po svneol=native#text/plain
 components/dbexport/languages/sdb_consts.ru.po svneol=native#text/plain
