ideintf: Extract CollectionPropEditForm from the Propedits unit by Alexander S. Klenin (issue #0015490)
git-svn-id: trunk@23432 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3707,6 +3707,7 @@ ideintf/checklistboxeditordlg.lrs svneol=native#text/pascal
 ideintf/checklistboxeditordlg.pas svneol=native#text/plain
 ideintf/collectionpropeditform.lfm svneol=native#text/plain
 ideintf/collectionpropeditform.lrs svneol=native#text/pascal
+ideintf/collectionpropeditform.pas svneol=native#text/plain
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
