IDE: confirm install packages: replaced messagedlg with custom dlg, bug #15564, from Alexander Klenin
git-svn-id: trunk@23533 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4919,6 +4919,8 @@ packager/addtopackagedlg.lfm svneol=native#text/plain
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
+packager/confirmpkglistdlg.lfm svneol=native#text/plain
+packager/confirmpkglistdlg.pas svneol=native#text/plain
 packager/globallinks/README.txt svneol=native#text/plain
 packager/globallinks/aggpaslcl-1.lpl svneol=native#text/plain
 packager/globallinks/appforms-0.lpl svneol=native#text/plain
