images: repack debugger images to reduce size, add show execution point image
git-svn-id: trunk@23575 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3778,6 +3778,7 @@ images/debugger/debugger_modify.png -text svneol=unset#images/png
 images/debugger/debugger_nosource_line.png -text
 images/debugger/debugger_options.png -text svneol=unset#image/png
 images/debugger/debugger_output.png -text svneol=unset#image/png
+images/debugger/debugger_show_execution_point.png -text svneol=unset#image/png
 images/debugger/debugger_source_line.png -text
 images/debugger/debugger_watches.png -text svneol=unset#image/png
 images/designer/Order_back_one.png -text
