--- a/.gitattributes
+++ b/.gitattributes
@@ -4734,6 +4734,7 @@ lcl/interfaces/win32/win32wseditbtn.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsextctrls.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsextdlgs.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsextdlgs.rc svneol=CRLF#text/plain eol=crlf
+lcl/interfaces/win32/win32wsextdlgs.res -text
 lcl/interfaces/win32/win32wsfactory.pas svneol=native#text/pascal
 lcl/interfaces/win32/win32wsfilectrl.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsforms.pp svneol=native#text/pascal
