codetools: started otheridentifiertree, removed TcodeTreeNode.GetRootNode use GetRoot instead
git-svn-id: trunk@23588 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -573,6 +573,7 @@ components/codetools/memcheck_laz.inc svneol=native#text/pascal
 components/codetools/methodjumptool.pas svneol=native#text/pascal
 components/codetools/multikeywordlisttool.pas svneol=native#text/pascal
 components/codetools/nonpascalcodetools.pas svneol=native#text/plain
+components/codetools/otheridentifiertree.pas svneol=native#text/plain
 components/codetools/pascalparsertool.pas svneol=native#text/pascal
 components/codetools/pascalreadertool.pas svneol=native#text/pascal
 components/codetools/ppucodetools.pas svneol=native#text/plain
