lcl: don't use initialization section with resources in extdlgs, include resources only if calculator panel is used.
git-svn-id: trunk@23638 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4093,7 +4093,6 @@ lcl/dynhasharray.pp svneol=native#text/pascal
 lcl/dynqueue.pas svneol=native#text/pascal
 lcl/editbtn.pas svneol=native#text/pascal
 lcl/extctrls.pp svneol=native#text/pascal
-lcl/extdlgs.lrs svneol=native#text/pascal
 lcl/extdlgs.pas svneol=native#text/pascal
 lcl/extendedstrings.pas svneol=native#text/pascal
 lcl/extgraphics.pas svneol=native#text/pascal
@@ -4806,6 +4805,7 @@ lcl/lazconfigstorage.pas svneol=native#text/pascal
 lcl/lazhelphtml.pas svneol=native#text/pascal
 lcl/lazhelpintf.pas svneol=native#text/pascal
 lcl/lazlinkedlist.pas svneol=native#text/pascal
+lcl/lcl_calc_images.lrs svneol=native#text/pascal
 lcl/lcl_dbgrid_images.lrs svneol=native#text/pascal
 lcl/lcl_dbnav_images.lrs svneol=native#text/pascal
 lcl/lcl_dock_images.lrs svneol=native#text/pascal
