IDE: javascript: started example to read xml with javascript identifiers
git-svn-id: trunk@23698 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -587,6 +587,10 @@ components/compilers/c/lazc.lpk svneol=native#text/plain
 components/compilers/c/lazc.pas svneol=native#text/plain
 components/compilers/c/lazcstrconsts.pas svneol=native#text/plain
 components/compilers/c/lazcutil.pas svneol=native#text/plain
+components/compilers/javascript/examples/ReadJSClassesXML.ico -text svneol=unset#image/ico
+components/compilers/javascript/examples/ReadJSClassesXML.lpi svneol=native#text/plain
+components/compilers/javascript/examples/ReadJSClassesXML.lpr svneol=native#text/plain
+components/compilers/javascript/examples/jsclassxmlread.pas svneol=native#text/plain
 components/custom/README.txt svneol=native#text/plain
 components/customform/custforms.pp svneol=native#text/plain
 components/customform/demo/appform.pas svneol=native#text/plain
