docs: added RTL and FCL entries.
git-svn-id: trunk@23716 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2443,8 +2443,47 @@ docs/images/laztitle.png -text
 docs/images/laztitle.svg -text svneol=native#image/svg%2Bxml
 docs/index.html svneol=native#text/html
 docs/xml/README.txt svneol=native#text/plain
+docs/xml/fcl/bmpcomn.xml svneol=native#text/xml
+docs/xml/fcl/clipping.xml svneol=native#text/xml
+docs/xml/fcl/ellipses.xml svneol=native#text/xml
+docs/xml/fcl/extinterpolation.xml svneol=native#text/xml
 docs/xml/fcl/fpcanvas.xml svneol=native#text/plain
+docs/xml/fcl/fpcolhash.xml svneol=native#text/xml
+docs/xml/fcl/fpditherer.xml svneol=native#text/xml
 docs/xml/fcl/fpimage.xml svneol=native#text/plain
+docs/xml/fcl/fpimgcanv.xml svneol=native#text/xml
+docs/xml/fcl/fpimgcmn.xml svneol=native#text/xml
+docs/xml/fcl/fppixlcanv.xml svneol=native#text/xml
+docs/xml/fcl/fpquantizer.xml svneol=native#text/xml
+docs/xml/fcl/fpreadbmp.xml svneol=native#text/xml
+docs/xml/fcl/fpreadgif.xml svneol=native#text/xml
+docs/xml/fcl/fpreadjpeg.xml svneol=native#text/xml
+docs/xml/fcl/fpreadpcx.xml svneol=native#text/xml
+docs/xml/fcl/fpreadpng.xml svneol=native#text/xml
+docs/xml/fcl/fpreadpnm.xml svneol=native#text/xml
+docs/xml/fcl/fpreadpsd.xml svneol=native#text/xml
+docs/xml/fcl/fpreadtga.xml svneol=native#text/xml
+docs/xml/fcl/fpreadtiff.xml svneol=native#text/xml
+docs/xml/fcl/fpreadxpm.xml svneol=native#text/xml
+docs/xml/fcl/fpreadxwd.xml svneol=native#text/xml
+docs/xml/fcl/fptiffcmn.xml svneol=native#text/xml
+docs/xml/fcl/fpwritebmp.xml svneol=native#text/xml
+docs/xml/fcl/fpwritejpeg.xml svneol=native#text/xml
+docs/xml/fcl/fpwritepcx.xml svneol=native#text/xml
+docs/xml/fcl/fpwritepng.xml svneol=native#text/xml
+docs/xml/fcl/fpwritepnm.xml svneol=native#text/xml
+docs/xml/fcl/fpwritetga.xml svneol=native#text/xml
+docs/xml/fcl/fpwritetiff.xml svneol=native#text/xml
+docs/xml/fcl/fpwritexpm.xml svneol=native#text/xml
+docs/xml/fcl/freetype.xml svneol=native#text/xml
+docs/xml/fcl/freetypeh.xml svneol=native#text/xml
+docs/xml/fcl/ftfont.xml svneol=native#text/xml
+docs/xml/fcl/pcxcomn.xml svneol=native#text/xml
+docs/xml/fcl/pixtools.xml svneol=native#text/xml
+docs/xml/fcl/pngcomn.xml svneol=native#text/xml
+docs/xml/fcl/pscanvas.xml svneol=native#text/xml
+docs/xml/fcl/targacmn.xml svneol=native#text/xml
+docs/xml/fcl/xwdfile.xml svneol=native#text/xml
 docs/xml/find_cvs_fpdoc_files.pl -text svneol=native#application/x-perl
 docs/xml/lcl/actnlist.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/alllclunits.xml svneol=LF#text/xml eol=lf
@@ -2586,6 +2625,10 @@ docs/xml/lcl/utf8process.xml svneol=native#text/plain
 docs/xml/lcl/utrace.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/xmlpropstorage.xml svneol=LF#text/xml eol=lf
 docs/xml/multi_makeskel.pl svneol=native#text/plain
+docs/xml/rtl/README.txt svneol=native#text/plain
+docs/xml/rtl/classes.xml svneol=native#text/xml
+docs/xml/rtl/system.xml svneol=native#text/xml
+docs/xml/rtl/sysutils.xml svneol=native#text/xml
 examples/address_book/addrbook.dpr svneol=native#text/pascal
 examples/address_book/addrbook.lpi svneol=native#text/plain
 examples/address_book/addrbook.lpr svneol=native#text/pascal
