LazDataDesktop, added spanish translation, from Lucas Martin, issue #15809
git-svn-id: trunk@23734 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5325,6 +5325,7 @@ tools/lazdatadesktop/frmsqlconnect.lfm svneol=native#text/plain
 tools/lazdatadesktop/frmsqlconnect.lrs svneol=native#text/pascal
 tools/lazdatadesktop/frmsqlconnect.pp svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.de.po svneol=native#text/plain
+tools/lazdatadesktop/languages/lazdatadesktop.es.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.pb.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.po svneol=native#text/plain
 tools/lazdatadesktop/languages/lazdatadesktop.ru.po svneol=native#text/plain
