lazde: patch by Alexey Lagunov:   - convert resources to $R   - start localization   - fix layout and other cosmetic changes
git-svn-id: trunk@23737 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2332,9 +2332,6 @@ designer/taborderdlg.lfm svneol=native#text/plain
 designer/taborderdlg.pas svneol=native#text/pascal
 doceditor/eleditor.pp svneol=native#text/pascal
 doceditor/eleditor.xml svneol=native#text/xml
-doceditor/fmmakeskel.lfm svneol=native#text/plain
-doceditor/fmmakeskel.lrs svneol=native#text/pascal
-doceditor/fmmakeskel.pp svneol=native#text/pascal
 doceditor/fpdeutil.pp svneol=native#text/pascal
 doceditor/fpdocupdater/fpdocfiles.pas svneol=native#text/pascal
 doceditor/fpdocupdater/fpdocupdater.lpi svneol=native#text/plain
@@ -2349,35 +2346,25 @@ doceditor/fpdocupdater/unitsummary.lfm svneol=native#text/plain
 doceditor/fpdocupdater/unitsummary.lrs svneol=native#text/pascal
 doceditor/fpdocupdater/unitsummary.pas svneol=native#text/pascal
 doceditor/frmabout.lfm svneol=native#text/plain
-doceditor/frmabout.lrs svneol=native#text/pascal
 doceditor/frmabout.pp svneol=native#text/pascal
 doceditor/frmbuild.lfm svneol=native#text/plain
-doceditor/frmbuild.lrs svneol=native#text/pascal
 doceditor/frmbuild.pp svneol=native#text/pascal
 doceditor/frmexample.lfm svneol=native#text/plain
-doceditor/frmexample.lrs svneol=native#text/pascal
 doceditor/frmexample.pp svneol=native#text/pascal
 doceditor/frmlink.lfm svneol=native#text/plain
-doceditor/frmlink.lrs svneol=native#text/pascal
 doceditor/frmlink.pp svneol=native#text/pascal
 doceditor/frmmain.lfm svneol=native#text/plain
-doceditor/frmmain.lrs svneol=native#text/pascal
 doceditor/frmmain.pp svneol=native#text/pascal
 doceditor/frmmain.xml svneol=native#text/xml
 doceditor/frmmakeskel.lfm svneol=native#text/plain
-doceditor/frmmakeskel.lrs svneol=native#text/pascal
 doceditor/frmmakeskel.pp svneol=native#text/pascal
 doceditor/frmnewnode.lfm svneol=native#text/plain
-doceditor/frmnewnode.lrs svneol=native#text/pascal
 doceditor/frmnewnode.pp svneol=native#text/pascal
 doceditor/frmoptions.lfm svneol=native#text/plain
-doceditor/frmoptions.lrs svneol=native#text/pascal
 doceditor/frmoptions.pp svneol=native#text/pascal
 doceditor/frmsource.lfm svneol=native#text/plain
-doceditor/frmsource.lrs svneol=native#text/pascal
 doceditor/frmsource.pas svneol=native#text/pascal
 doceditor/frmtable.lfm svneol=native#text/plain
-doceditor/frmtable.lrs svneol=native#text/pascal
 doceditor/frmtable.pp svneol=native#text/pascal
 doceditor/icons.lrs svneol=native#text/pascal
 doceditor/images/Delete_16N.bmp -text
@@ -2405,9 +2392,11 @@ doceditor/images/show_symbols24.bmp -text
 doceditor/images/styles_formatting24.bmp -text
 doceditor/images/treenode_add24.bmp -text
 doceditor/images/underline_blue24.bmp -text
+doceditor/languages/lazde.po svneol=native#text/plain
+doceditor/languages/lazde.ru.po svneol=native#text/plain
 doceditor/lazde.lpi svneol=native#text/plain
 doceditor/lazde.lpr svneol=native#text/pascal
-doceditor/lazde.rc svneol=native#text/plain
+doceditor/lazde.res -text
 doceditor/lazdemsg.pp svneol=native#text/pascal
 doceditor/lazdeopts.pp svneol=native#text/pascal
 doceditor/pgeditor.pp svneol=native#text/pascal
