--- a/.gitattributes
+++ b/.gitattributes
@@ -732,6 +732,11 @@ components/education/edupkgsystem.pas svneol=native#text/plain
 components/education/edupropsevents.lfm svneol=native#text/plain
 components/education/edupropsevents.lrs svneol=native#text/plain
 components/education/edupropsevents.pas svneol=native#text/plain
+components/externhelp/README.txt svneol=native#text/plain
+components/externhelp/externhelp.lpk svneol=native#text/plain
+components/externhelp/externhelp.pas svneol=native#text/plain
+components/externhelp/externhelpfrm.lfm svneol=native#text/plain
+components/externhelp/externhelpfrm.pas svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lrs svneol=native#text/pascal
 components/filebrowser/frmconfigfilebrowser.pp svneol=native#text/plain
