--- a/.gitattributes
+++ b/.gitattributes
@@ -2211,8 +2211,8 @@ converter/convertdelphi.pas svneol=native#text/plain
 converter/convertsettings.lfm svneol=native#text/plain
 converter/convertsettings.pas svneol=native#text/plain
 converter/lazxmlforms.pas svneol=native#text/plain
-converter/missingunitsunit.lfm svneol=native#text/plain
-converter/missingunitsunit.pas svneol=native#text/plain
+converter/missingunits.lfm svneol=native#text/plain
+converter/missingunits.pas svneol=native#text/plain
 debian/README.Debian svneol=native#text/plain
 debian/README.source svneol=native#text/plain
 debian/changelog svneol=native#text/plain
