Initial version of missing properties fixer.
git-svn-id: trunk@23801 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2211,6 +2211,8 @@ converter/convertdelphi.pas svneol=native#text/plain
 converter/convertsettings.lfm svneol=native#text/plain
 converter/convertsettings.pas svneol=native#text/plain
 converter/lazxmlforms.pas svneol=native#text/plain
+converter/missingpropertiesdlg.lfm svneol=native#text/plain
+converter/missingpropertiesdlg.pas svneol=native#text/plain
 converter/missingunits.lfm svneol=native#text/plain
 converter/missingunits.pas svneol=native#text/plain
 debian/README.Debian svneol=native#text/plain
