--- a/.gitattributes
+++ b/.gitattributes
@@ -954,6 +954,9 @@ components/jcf2/IdePlugin/lazarus/jcfidelazarus.pas svneol=native#text/pascal
 components/jcf2/IdePlugin/lazarus/jcfidemain.pas svneol=native#text/pascal
 components/jcf2/IdePlugin/lazarus/jcfideregister.pas svneol=native#text/pascal
 components/jcf2/IdePlugin/lazarus/jcfsettings.lpi svneol=native#text/plain
+components/jcf2/IdePlugin/lazarus/jcfuiconsts.pas svneol=native#text/plain
+components/jcf2/IdePlugin/lazarus/languages/jcfideregister.ru.po svneol=native#text/plain
+components/jcf2/IdePlugin/lazarus/languages/jcfuiconsts.ru.po svneol=native#text/plain
 components/jcf2/Include/JcfGlobal.inc svneol=native#text/plain
 components/jcf2/JCF.ico -text svneol=unset#image/ico
 components/jcf2/JCFAllD11.bpg svneol=native#text/plain
