added support for haiku from olivier (issue #15519)
git-svn-id: trunk@23829 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3444,6 +3444,7 @@ ide/imexportcompileropts.lfm svneol=native#text/plain
 ide/imexportcompileropts.pas svneol=native#text/pascal
 ide/include/darwin/lazconf.inc svneol=native#text/pascal
 ide/include/freebsd/lazconf.inc svneol=native#text/pascal
+ide/include/haiku/lazconf.inc svneol=native#text/plain
 ide/include/ide.inc svneol=native#text/pascal
 ide/include/linux/lazconf.inc svneol=native#text/pascal
 ide/include/netbsd/lazconf.inc svneol=native#text/pascal
