LazResExplorer:   1) Renamed all files to lowercase, fixed typo (exploer -> explorer);   2) Disable project i18n to avoid blown up .po files;   3) Temporarily removed Russian translation (will be added later).
git-svn-id: trunk@23867 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3006,17 +3006,16 @@ examples/lazintfimage/fadein1.lpr svneol=native#text/pascal
 examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
 examples/lazintfimage/mainunit1.lrs svneol=native#text/pascal
 examples/lazintfimage/mainunit1.pas svneol=native#text/pascal
-examples/lazresexploer/ResExploer.ico -text svneol=unset#image/ico
-examples/lazresexploer/ResExploer.lpi svneol=native#text/plain
-examples/lazresexploer/ResExploer.lpr svneol=native#text/plain
-examples/lazresexploer/ResExploer.res -text
-examples/lazresexploer/languages/ResExploer.po svneol=native#text/plain
-examples/lazresexploer/languages/ResExploer.ru.po svneol=native#text/plain
-examples/lazresexploer/reaboutunit.lfm svneol=native#text/plain
-examples/lazresexploer/reaboutunit.pas svneol=native#text/plain
-examples/lazresexploer/reconstsunit.pas svneol=native#text/plain
-examples/lazresexploer/remainunit.lfm svneol=native#text/plain
-examples/lazresexploer/remainunit.pas svneol=native#text/plain
+examples/lazresexplorer/languages/resexplorer.po svneol=native#text/plain
+examples/lazresexplorer/reaboutunit.lfm svneol=native#text/plain
+examples/lazresexplorer/reaboutunit.pas svneol=native#text/plain
+examples/lazresexplorer/reconstsunit.pas svneol=native#text/plain
+examples/lazresexplorer/remainunit.lfm svneol=native#text/plain
+examples/lazresexplorer/remainunit.pas svneol=native#text/plain
+examples/lazresexplorer/resexplorer.ico -text svneol=unset#image/ico
+examples/lazresexplorer/resexplorer.lpi svneol=native#text/plain
+examples/lazresexplorer/resexplorer.lpr svneol=native#text/pascal
+examples/lazresexplorer/resexplorer.res -text
 examples/lclversion/lclversionexample.lpi svneol=native#text/plain
 examples/lclversion/lclversionexample.lpr svneol=native#text/plain
 examples/lclversion/unit1.lfm svneol=native#text/plain
