--- a/.gitattributes
+++ b/.gitattributes
@@ -3007,6 +3007,7 @@ examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
 examples/lazintfimage/mainunit1.lrs svneol=native#text/pascal
 examples/lazintfimage/mainunit1.pas svneol=native#text/pascal
 examples/lazresexplorer/languages/resexplorer.po svneol=native#text/plain
+examples/lazresexplorer/languages/resexplorer.ru.po svneol=native#text/plain
 examples/lazresexplorer/reaboutunit.lfm svneol=native#text/plain
 examples/lazresexplorer/reaboutunit.pas svneol=native#text/plain
 examples/lazresexplorer/reconstsunit.pas svneol=native#text/plain
