added tbufdataset from Joost (issue #15936)
git-svn-id: trunk@23892 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3715,6 +3715,7 @@ images/components/tasyncprocess.png -text
 images/components/tbarchart.png -text svneol=unset#image/png
 images/components/tbevel.png -text svneol=unset#image/png
 images/components/tbitbtn.png -text svneol=unset#image/png
+images/components/tbufdataset.png -text svneol=unset#image/png
 images/components/tbutton.png -text svneol=unset#image/png
 images/components/tbuttonpanel.png -text svneol=unset#image/png
 images/components/tcalcedit.png -text svneol=unset#image/png
