LazDE doceditor - applied patch from alexs with small modifications:   1. Main window controls are now localized using actions;   2. Localized "About..." form; made it display GPL license (loaded from the root Lazarus directory);   3. Fixed loading of .po files when LazDE was not started from its own directory;   4. Added version info;   5. Fixed main icon.
git-svn-id: trunk@23929 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2395,6 +2395,7 @@ doceditor/images/insert_doc24.bmp -text
 doceditor/images/insert_hyperlink24.bmp -text
 doceditor/images/insert_table24.bmp -text
 doceditor/images/italic_blue24.bmp -text
+doceditor/images/mainicon.png -text svneol=unset#image/png
 doceditor/images/node_edit.xpm -text svneol=native#image/x-xpixmap
 doceditor/images/node_finished.xpm -text svneol=native#image/x-xpixmap
 doceditor/images/node_modified.xpm -text svneol=native#image/x-xpixmap
