--- a/.gitattributes
+++ b/.gitattributes
@@ -2303,6 +2303,7 @@ debugger/processlist.pas svneol=native#text/pascal
 debugger/registersdlg.lfm svneol=native#text/pascal
 debugger/registersdlg.pp svneol=native#text/pascal
 debugger/sshgdbmidebugger.pas svneol=native#text/pascal
+debugger/test/debugtest.lpi svneol=native#text/plain
 debugger/test/debugtest.pp svneol=native#text/pascal
 debugger/test/debugtestform.lrs svneol=native#text/pascal
 debugger/test/debugtestform.pp svneol=native#text/pascal
