--- a/.gitattributes
+++ b/.gitattributes
@@ -2405,6 +2405,7 @@ doceditor/images/show_symbols24.bmp -text
 doceditor/images/styles_formatting24.bmp -text
 doceditor/images/treenode_add24.bmp -text
 doceditor/images/underline_blue24.bmp -text
+doceditor/languages/lazde.de.po svneol=native#text/plain
 doceditor/languages/lazde.po svneol=native#text/plain
 doceditor/languages/lazde.ru.po svneol=native#text/plain
 doceditor/lazde.ico -text svneol=unset#image/ico
