TAChart: Add rotated series demo
git-svn-id: trunk@24128 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2108,6 +2108,10 @@ components/tachart/demo/legend/legenddemo.lpi svneol=native#text/plain
 components/tachart/demo/legend/legenddemo.lpr svneol=native#text/pascal
 components/tachart/demo/legend/main.lfm svneol=native#text/plain
 components/tachart/demo/legend/main.pas svneol=native#text/pascal
+components/tachart/demo/rotate/Main.lfm svneol=native#text/pascal
+components/tachart/demo/rotate/Main.pas svneol=native#text/pascal
+components/tachart/demo/rotate/rotatedemo.lpi svneol=native#text/plain
+components/tachart/demo/rotate/rotatedemo.lpr svneol=native#text/pascal
 components/tachart/demo/save/main.lfm svneol=native#text/plain
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
