--- a/.gitattributes
+++ b/.gitattributes
@@ -1929,8 +1929,10 @@ components/synedit/design/tsyntexsyn.png -text svneol=unset#image/png
 components/synedit/design/tsynunixshellscriptsyn.png -text svneol=unset#image/png
 components/synedit/design/tsynvbsyn.png -text svneol=unset#image/png
 components/synedit/design/tsynxmlsyn.png -text svneol=unset#image/png
+components/synedit/docs/xml/synedit.xml svneol=native#text/xml
 components/synedit/docs/xml/synedithighlighter.xml svneol=native#text/xml
 components/synedit/docs/xml/synedittextbase.xml svneol=native#text/xml
+components/synedit/docs/xml/synedittextbuffer.xml svneol=native#text/xml
 components/synedit/languages/README.txt svneol=native#text/plain
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
