--- a/.gitattributes
+++ b/.gitattributes
@@ -2230,6 +2230,8 @@ converter/missingpropertiesdlg.lfm svneol=native#text/plain
 converter/missingpropertiesdlg.pas svneol=native#text/plain
 converter/missingunits.lfm svneol=native#text/plain
 converter/missingunits.pas svneol=native#text/plain
+converter/replacenamesunit.lfm svneol=native#text/plain
+converter/replacenamesunit.pas svneol=native#text/plain
 debian/README.Debian svneol=native#text/plain
 debian/README.source svneol=native#text/plain
 debian/changelog svneol=native#text/plain
