--- a/.gitattributes
+++ b/.gitattributes
@@ -2143,6 +2143,7 @@ components/tachart/taseries.pas svneol=native#text/plain
 components/tachart/taserieseditor.lfm svneol=native#text/plain
 components/tachart/taserieseditor.pas svneol=native#text/plain
 components/tachart/tasources.pas svneol=native#text/pascal
+components/tachart/tatools.pas svneol=native#text/pascal
 components/tachart/tatypes.pas svneol=native#text/plain
 components/tachart/tchart.png -text svneol=unset#images/png
 components/tachart/tdbchartsource.png -text
