--- a/.gitattributes
+++ b/.gitattributes
@@ -2146,6 +2146,7 @@ components/tachart/tasources.pas svneol=native#text/pascal
 components/tachart/tatools.pas svneol=native#text/pascal
 components/tachart/tatypes.pas svneol=native#text/plain
 components/tachart/tchart.png -text svneol=unset#images/png
+components/tachart/tcharttoolset.png -text
 components/tachart/tdbchartsource.png -text
 components/tachart/tlistchartsource.png -text svneol=unset#images/png
 components/tachart/trandomchartsource.png -text svneol=unset#images/png
