TAChart: Extract generic TASubcomponentsEditor unit from TASeriesEditor
git-svn-id: trunk@24318 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2140,9 +2140,10 @@ components/tachart/tagraph.lrs svneol=native#text/pascal
 components/tachart/tagraph.pas svneol=native#text/plain
 components/tachart/talegend.pas svneol=native#text/plain
 components/tachart/taseries.pas svneol=native#text/plain
-components/tachart/taserieseditor.lfm svneol=native#text/plain
 components/tachart/taserieseditor.pas svneol=native#text/plain
 components/tachart/tasources.pas svneol=native#text/pascal
+components/tachart/tasubcomponentseditor.lfm svneol=native#text/plain
+components/tachart/tasubcomponentseditor.pas svneol=native#text/pascal
 components/tachart/tatools.pas svneol=native#text/pascal
 components/tachart/tatypes.pas svneol=native#text/plain
 components/tachart/tchart.png -text svneol=unset#images/png
