TAChart: Add tools demo
git-svn-id: trunk@24346 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2121,6 +2121,10 @@ components/tachart/demo/save/main.lfm svneol=native#text/plain
 components/tachart/demo/save/main.pas svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpi svneol=native#text/plain
 components/tachart/demo/save/savedemo.lpr svneol=native#text/plain
+components/tachart/demo/tools/main.lfm svneol=native#text/plain
+components/tachart/demo/tools/main.pas svneol=native#text/pascal
+components/tachart/demo/tools/toolsdemo.lpi svneol=native#text/plain
+components/tachart/demo/tools/toolsdemo.lpr svneol=native#text/pascal
 components/tachart/fpdoc/tachartaxis.xml svneol=native#text/plain
 components/tachart/fpdoc/tachartutils.xml svneol=native#text/plain
 components/tachart/fpdoc/tacustomseries.xml svneol=native#text/plain
