--- a/.gitattributes
+++ b/.gitattributes
@@ -5029,6 +5029,7 @@ packager/globallinks/designbaseclassdemopkg-0.lpl svneol=native#text/plain
 packager/globallinks/easydockmgr-0.lpl svneol=native#text/plain
 packager/globallinks/editortoolbar-0.lpl svneol=native#text/plain
 packager/globallinks/exploreidemenu-0.lpl svneol=native#text/plain
+packager/globallinks/externhelp-1.lpl svneol=native#text/plain
 packager/globallinks/filefindlaz-0.lpl svneol=native#text/plain
 packager/globallinks/fpcunitconsolerunner-1.lpl svneol=native#text/plain
 packager/globallinks/h2paswizard-0.lpl svneol=native#text/plain
