* debug: implemented dispay of debugevents. patch #16148 by Flavio Etrusco
git-svn-id: trunk@24577 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2276,6 +2276,8 @@ debugger/breakpropertydlg.pas svneol=native#text/pascal
 debugger/callstackdlg.lfm svneol=native#text/plain
 debugger/callstackdlg.pp svneol=native#text/pascal
 debugger/cmdlinedebugger.pp svneol=native#text/pascal
+debugger/debugeventsform.lfm svneol=native#text/plain
+debugger/debugeventsform.pp svneol=native#text/pascal
 debugger/debugger.pp svneol=native#text/pascal
 debugger/debuggerdlg.pp svneol=native#text/pascal
 debugger/debugoutputform.lfm svneol=native#text/plain
