--- a/.gitattributes
+++ b/.gitattributes
@@ -1983,6 +1983,7 @@ components/synedit/syneditexport.pas svneol=native#text/pascal
 components/synedit/syneditfoldedview.pp svneol=native#text/plain
 components/synedit/synedithighlighter.pp svneol=native#text/pascal
 components/synedit/synedithighlighterfoldbase.pas svneol=native#text/plain
+components/synedit/synedithighlighterxmlbase.pas svneol=native#text/pascal
 components/synedit/syneditkeycmds.pp svneol=native#text/pascal
 components/synedit/syneditlazdsgn.lrs svneol=native#text/pascal
 components/synedit/syneditlazdsgn.pas svneol=native#text/pascal
